--- a/app/src/main/res/layout/speech_activity_main.xml
+++ b/app/src/main/res/layout/speech_activity_main.xml
@@ -8,14 +8,14 @@
 
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/speechTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         tools:text="Output will be displayed here" />
 
     <ProgressBar
-        android:id="@+id/progressBar1"
+        android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,7 +32,7 @@
         android:text='@string/start_listening_btn' />
 
     <TextView
-        android:id="@+id/tvError"
+        android:id="@+id/errorTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
